Copyleft added. Long live freedom to use, copy, share and redistribute.

--- a/css/style.css
+++ b/css/style.css
@@ -413,6 +413,18 @@ a {
 	border: none;
 }
 
+.copyleft {
+	display: inline-block;
+	text-align: right;
+	margin: 0;
+	-moz-transform: scaleX(-1);
+	-o-transform: scaleX(-1);
+	-webkit-transform: scaleX(-1);
+	transform: scaleX(-1);
+	filter: FlipH;
+	-ms-filter: "FlipH";
+}
+
 /* iphone 6 and up  ----------------------------------------------------------*/
 @media (min-width: 360px) {
 	#rsvp .iframe-container {
