--- a/css/style.css
+++ b/css/style.css
@@ -107,6 +107,34 @@ a {
 	padding-top: 100px;
 }
 
+nav.khasak-nav {
+	color: white;
+	float: right;
+	text-decoration: none;
+	margin-top: 30px;
+	z-index: 100;
+}
+
+nav a, nav a:hover{
+	color: white !important;
+	text-decoration: none !important;
+	border-color: transparent !important;
+}
+
+nav a:hover {
+	color: #cccccc;
+}
+
+nav a:after {
+	content: ' / ';
+	margin: 10px;
+}
+
+nav a:last-child:after {
+	content: '';
+	margin-right: 0;
+}
+
 /*.divider {
 	background: url(../images/divider.png) center center repeat-x;
 	background-size: 140px auto;
